--- a/index.html
+++ b/index.html
@@ -3,7 +3,171 @@
 <head>
     <meta charset="utf-8">
     <title>Задача «Морда»</title>
+    <link rel="stylesheet" href="index.css">
 </head>
-<body>
+<body class="flex-center">
+    <div class="grid">
+    <div class="header-city">
+        <a class="link-city" href="#">Екатеринбург</a>
+    </div>
+    <div class="header-settings">
+        <a class="link-settings" href="#">Настройка</a>
+    </div>
+    <div class="header-account">
+        <span class="yandex-color">login</span><br>
+        Почта: <span class="bold">123</span>
+        <div class="popup-box">
+            
+        </div>
+    </div>
+    <div class="recent-news">
+        <a href="#" class="heading">Сейчас в СМИ</a>
+        <a href="#" class="sub-heading">в Екатеринбурге</a>
+        <span class="sad">20 ноября, понедельник 22:38</span>
+        <ul>
+            <li>Школьник из ЯНАО рассказал в Бундестаге о «невинных солдатах вермахта»</li>
+            <li>Патриарх Кирилл предупредил о приближении конца света</li>
+            <li>Минобороны Украины опровергло причастность Шаройко к шпионажу в Белоруссии</li>
+            <li>Лидер СДПГ убежден, что Германию ждут перевыборы в Бундестаг</li>
+            <li>CNN: ВМС Аргентины могли уловить шум от пропавшей подлодки</li>
+        </ul>
+        <ul class="inline-list">
+            <li><span class="bold">USD ЦБ</span> 59,27 <span class="sad">−0,36</span></li>
+            <li><span class="bold">EUR ЦБ</span> 69,67 <span class="sad">−0,69</span></li>
+            <li><span class="bold">НЕФТЬ</span> 62,05 <span class="sad">−1,10%</span></li>
+            <li><span class="bold sad">&middot;&middot;&middot;</span></li>
+        </ul>
+    </div>
+    <div class="adv-vertical">
+        <figure>
+            <img class="adv-img" alt="disk" title="disk" src="disk.jpg">
+            <figcaption>
+                <a href="#">32 ГБ студентам на Яндекс.Диске</a>
+                <br>бесплатно и навсегда
+            </figcaption>
+        </figure>
+    </div>
+    <div class="search-links">
+        <ul class="inline-list links">
+            <li><a href="#">Видео</a></li>
+            <li><a href="#">Картинки</a></li>
+            <li><a href="#">Новости</a></li>
+            <li><a href="#">Карты</a></li>
+            <li><a href="#">Маркет</a></li>
+            <li><a href="#">Переводчик</a></li>
+            <li><a href="#">Музыка</a></li>
+            <li><a href="#">еще</a></li>
+        </ul>
+    </div>
+    <div class="searchbar">
+        <div class="searchbox">
+            <input type="text"><button>Найти</button>
+        </div>
+    </div>
+    <div class="searchbar-logo">
+        <span class="yandex-color">Яндекс<span>
+    </div>
+    <div class="adv-horizontal">
+        <img class="adv-horizontal-img" alt="samsung" title="samsung" src="horizontal.jpg">
+    </div>
+    <div class="columns">
+        <div class="column">
+            <div class="column-block">
+                <h3 class="heading">Посещаемое</h3>
+                <ul class="nodots">
+                    <li><a href="#">Маркет</a> - китайская распродажа</li>
+                    <li><a href="#">Авто.ру</a> - Туссан третьей серии</li>
+                    <li><a href="#">Недвижимость</a> - продажа студии</li>
+                    <li><a href="#">Работа</a> - охранником</li>
+                    <li><a href="#">Здоровье</a> - врач на связи</li>
+                    <li><a href="#">Коллекции</a> - как мелировать волосы</li>
+                    <li><a href="#">Авибилеты</a> - из Екатеринбурга</li>
+                </ul>
+            </div>
+            <div class="column-block">
+                <h3 class="heading">Посещаемое</h3>
+                Раздел: <a href="#">Медицинские</a> . <br>
+                - Вас лечить хорошо или бесплатно?
+            </div>
+            <div class="column-block padding-top">
+                <a href="#">Показать еще</a>
+            </div>
+        </div>
+        <div class="column">
+            <div class="column-block">
+                <h3 class="heading">Телепрограмма</h3>
+                <ul class="nodots">
+                    <li>16:00 Понять. Простить <span class="sad">41 Домашний</span></li>
+                    <li>16:30 Место встречи <span class="sad">НТВ</span></li>
+                    <li>16:30 Детективы <span class="sad">Пятый канал</span></li>
+                    <li>16:30 Новости <span class="sad">РЕН ТВ</span></li>
+                    <li>16:30 Гадалка <span class="sad">ТВ-3</span></li>
+                    <li>16:30 Реальные пацаны <span class="sad">ТНТ</span></li>
+                </ul>
+            </div>
+            <div class="column-block">
+                <h3 class="heading">Автомобильные новости</h3>
+                <ul class="nodots">
+                    <li>
+                        Правительство поддержало законопроект о регистрации машиномест
+                        <span class="sad">12:19</span>
+                    </li>
+                    <li>
+                        Правительство поддержало законопроект о регистрации машиномест
+                        <span class="sad">12:19</span>
+                    </li>
+                    <li>
+                        Правительство поддержало законопроект о регистрации машиномест
+                        <span class="sad">12:19</span>
+                    </li>
+                    <li>
+                        Правительство поддержало законопроект о регистрации машиномест
+                        <span class="sad">12:19</span>
+                    </li>
+                    <li>
+                        Правительство поддержало законопроект о регистрации машиномест
+                        <span class="sad">12:19</span>
+                    </li>
+                    <li>
+                        Правительство поддержало законопроект о регистрации машиномест
+                        <span class="sad">12:19</span>
+                    </li>
+                    <li>
+                        Правительство поддержало законопроект о регистрации машиномест
+                        <span class="sad">12:19</span>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="column">
+            <div class="column-block">
+                <h3 class="heading">Погода</h3>
+                Вечер -5, ночь -7
+            </div>
+            <div class="column-block">
+                <h3 class="heading">Пробки</h3>
+                Местами затруднения
+            </div>
+            <div class="column-block">
+                <h3 class="heading">Карта Екатеринбурга</h3>
+                <a href="#">Такси</a>
+                <a href="#">Расписания</a>
+                <br>
+                <a href="#">Междугородние автобусы</a>
+            </div>
+            <div class="column-block">
+                <h3 class="heading">Афиша</h3>
+                <ul class="nodots">
+                    <li>Субурбикон <span class="sad">премьера в чт</span></li>
+                    <li>Последний богатырь <span class="sad">прилючения</span></li>
+                    <li>Фиксики: Большой секрет <span class="sad">мультфильм</span></li>
+                    <li>Тор: Рагнарёк <span class="sad">фэнтези</span></li>
+                    <li>Убийство в восточном... <span class="sad">драма</span></li>
+                    <li><a class="bold" href="#">Концерты - Brainstorm</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    </div>
 </body>
 </html>
