br, object-conatin

--- a/index.html
+++ b/index.html
@@ -14,10 +14,13 @@
         <a class="link-settings" href="#">Настройка</a>
     </div>
     <div class="header-account">
-        <span class="yandex-color">login</span><br>
-        Почта: <span class="bold">123</span>
+        <p>
+            <span class="yandex-color">login</span>
+        </p>
+        <p>
+            Почта: <span class="bold">123</span>
+        </p>
         <div class="popup-box">
-            
         </div>
     </div>
     <div class="recent-news">
@@ -42,8 +45,8 @@
         <figure>
             <img class="adv-img" alt="disk" title="disk" src="disk.jpg">
             <figcaption>
-                <a href="#">32 ГБ студентам на Яндекс.Диске</a>
-                <br>бесплатно и навсегда
+                <p><a href="#">32 ГБ студентам на Яндекс.Диске</a></p>
+                <p>бесплатно и навсегда</p>
             </figcaption>
         </figure>
     </div>
@@ -86,8 +89,8 @@
             </div>
             <div class="column-block">
                 <h3 class="heading">Посещаемое</h3>
-                Раздел: <a href="#">Медицинские</a> . <br>
-                - Вас лечить хорошо или бесплатно?
+                <p>Раздел: <a href="#">Медицинские</a> .</p>
+                <p>- Вас лечить хорошо или бесплатно?</p>
             </div>
             <div class="column-block padding-top">
                 <a href="#">Показать еще</a>
@@ -150,10 +153,11 @@
             </div>
             <div class="column-block">
                 <h3 class="heading">Карта Екатеринбурга</h3>
-                <a href="#">Такси</a>
-                <a href="#">Расписания</a>
-                <br>
-                <a href="#">Междугородние автобусы</a>
+                <p>
+                    <a href="#">Такси</a>
+                    <a href="#">Расписания</a>
+                </p>
+                <p><a href="#">Междугородние автобусы</a></p>
             </div>
             <div class="column-block">
                 <h3 class="heading">Афиша</h3>
