--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="popup-box">
         </div>
     </div>
-    <div class="recent-news">
+    <section class="recent-news">
         <a href="#" class="heading">Сейчас в СМИ</a>
         <a href="#" class="sub-heading">в Екатеринбурге</a>
         <span class="sad">20 ноября, понедельник 22:38</span>
@@ -40,8 +40,8 @@
             <li><span class="bold">НЕФТЬ</span> 62,05 <span class="sad">−1,10%</span></li>
             <li><span class="bold sad">&middot;&middot;&middot;</span></li>
         </ul>
-    </div>
-    <div class="adv-vertical">
+    </section>
+    <section class="adv-vertical">
         <figure>
             <img class="adv-img" alt="disk" title="disk" src="disk.jpg">
             <figcaption>
@@ -49,8 +49,8 @@
                 <p>бесплатно и навсегда</p>
             </figcaption>
         </figure>
-    </div>
-    <div class="search-links">
+    </section>
+    <section class="search-links">
         <ul class="inline-list links">
             <li><a href="#">Видео</a></li>
             <li><a href="#">Картинки</a></li>
@@ -61,12 +61,13 @@
             <li><a href="#">Музыка</a></li>
             <li><a href="#">еще</a></li>
         </ul>
-    </div>
-    <div class="searchbar">
+    </section>
+    <main class="searchbar">
+        <input type="text"><button>Найти</button>
         <div class="searchbox">
-            <input type="text"><button>Найти</button>
+            
         </div>
-    </div>
+    </main>
     <div class="searchbar-logo">
         <span class="yandex-color">Яндекс<span>
     </div>
@@ -74,8 +75,8 @@
         <img class="adv-horizontal-img" alt="samsung" title="samsung" src="horizontal.jpg">
     </div>
     <div class="columns">
-        <div class="column">
-            <div class="column-block">
+        <section class="column">
+            <article class="column-block">
                 <h3 class="heading">Посещаемое</h3>
                 <ul class="nodots">
                     <li><a href="#">Маркет</a> - китайская распродажа</li>
@@ -86,18 +87,18 @@
                     <li><a href="#">Коллекции</a> - как мелировать волосы</li>
                     <li><a href="#">Авибилеты</a> - из Екатеринбурга</li>
                 </ul>
-            </div>
-            <div class="column-block">
+            </article>
+            <article class="column-block">
                 <h3 class="heading">Посещаемое</h3>
                 <p>Раздел: <a href="#">Медицинские</a> .</p>
                 <p>- Вас лечить хорошо или бесплатно?</p>
-            </div>
-            <div class="column-block padding-top">
+            </article>
+            <article class="column-block padding-top">
                 <a href="#">Показать еще</a>
-            </div>
-        </div>
-        <div class="column">
-            <div class="column-block">
+            </article>
+        </section>
+        <section class="column">
+            <article class="column-block">
                 <h3 class="heading">Телепрограмма</h3>
                 <ul class="nodots">
                     <li>16:00 Понять. Простить <span class="sad">41 Домашний</span></li>
@@ -107,8 +108,8 @@
                     <li>16:30 Гадалка <span class="sad">ТВ-3</span></li>
                     <li>16:30 Реальные пацаны <span class="sad">ТНТ</span></li>
                 </ul>
-            </div>
-            <div class="column-block">
+            </article>
+            <article class="column-block">
                 <h3 class="heading">Автомобильные новости</h3>
                 <ul class="nodots">
                     <li>
@@ -140,26 +141,26 @@
                         <span class="sad">12:19</span>
                     </li>
                 </ul>
-            </div>
-        </div>
-        <div class="column">
-            <div class="column-block">
+            </article>
+        </section>
+        <section class="column">
+            <article class="column-block">
                 <h3 class="heading">Погода</h3>
                 Вечер -5, ночь -7
-            </div>
-            <div class="column-block">
+            </article>
+            <article class="column-block">
                 <h3 class="heading">Пробки</h3>
                 Местами затруднения
-            </div>
-            <div class="column-block">
+            </article>
+            <article class="column-block">
                 <h3 class="heading">Карта Екатеринбурга</h3>
                 <p>
                     <a href="#">Такси</a>
                     <a href="#">Расписания</a>
                 </p>
                 <p><a href="#">Междугородние автобусы</a></p>
-            </div>
-            <div class="column-block">
+            </article>
+            <article class="column-block">
                 <h3 class="heading">Афиша</h3>
                 <ul class="nodots">
                     <li>Субурбикон <span class="sad">премьера в чт</span></li>
@@ -169,8 +170,8 @@
                     <li>Убийство в восточном... <span class="sad">драма</span></li>
                     <li><a class="bold" href="#">Концерты - Brainstorm</a></li>
                 </ul>
-            </div>
-        </div>
+            </article>
+        </section>
     </div>
     </div>
 </body>
