--- a/index.html
+++ b/index.html
@@ -63,10 +63,7 @@
         </ul>
     </section>
     <main class="searchbar">
-        <input type="text"><button>Найти</button>
-        <div class="searchbox">
-            
-        </div>
+        <input type="text"><button onclick="alert(1)">Найти</button>
     </main>
     <div class="searchbar-logo">
         <span class="yandex-color">Яндекс<span>
